--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .ts",
+    "test": "echo 'tests is empty'",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
