--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:all": "npm run build && npm run build:types",
     "dev": "NODE_ENV=development node esbuild.config.js",
     "lint": "eslint src --ext .ts",
-    "test": "echo 'tests is empty'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
@@ -24,12 +26,15 @@
     "@diplodoc/cli": "^4.57.8",
     "@diplodoc/lint": "^1.2.1",
     "@diplodoc/tsconfig": "^1.0.2",
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.0.0",
     "esbuild": "^0.19.5",
     "esbuild-node-externals": "^1.8.0",
     "eslint": "^8.0.0",
+    "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
