--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build:types": "tsc --emitDeclarationOnly",
     "build:all": "npm run build && npm run build:types",
     "dev": "NODE_ENV=development node esbuild.config.js",
-    "lint": "eslint src --ext .ts",
+    "lint": "lint update && lint",
+    "lint:fix": "lint update && lint fix",
+    "pre-commit": "lint update && lint-staged",
+    "prepare": "husky",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
