--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@diplodoc/cli": "^4.57.8",
+    "@diplodoc/cli": "^5.0.0-rc-25",
     "@diplodoc/lint": "^1.2.1",
     "@diplodoc/tsconfig": "^1.0.2",
     "@types/jest": "^29.5.0",
@@ -42,6 +42,6 @@
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
-    "@diplodoc/cli": "^4.57.8"
+    "@diplodoc/cli": "^5.0.0-rc-25"
   }
 }
