chore: remove esbuild

--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "access": "public"
   },
   "scripts": {
-    "build:es": "node esbuild.config.js",
-    "build": "tsc",
+    "build": "tsc && cp src/client/search.js dist/src/client/search.js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:all": "npm run build && npm run build:types",
-    "dev": "NODE_ENV=development node esbuild.config.js",
     "lint": "lint update && lint",
     "lint:fix": "lint update && lint fix",
     "pre-commit": "lint update && lint-staged",
@@ -36,8 +34,6 @@
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^18.0.0",
-    "esbuild": "^0.19.5",
-    "esbuild-node-externals": "^1.8.0",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
