--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "sourceMap": true,
     "experimentalDecorators": false
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
-} 
+}
