--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@diplodoc/search-extension": "^1.0.0",
     "algoliasearch": "^5.0.0",
     "cheerio": "^1.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
     "@diplodoc/cli": "^5.0.0-rc-25",
