--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@diplodoc/algolia",
+  "name": "@diplodoc/algolia-extension",
   "version": "0.4.1",
   "description": "Algolia search integration extension for Diplodoc",
   "main": "dist/index.js",
